[gd_scene load_steps=3 format=2]

[ext_resource path="res://BlackTexture.png" type="Texture" id=1]
[ext_resource path="res://Levels and Menus/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
modulate = Color( 1, 1, 1, 0.411765 )
margin_right = 320.0
margin_bottom = 181.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 141.0
margin_top = 74.0
margin_right = 182.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MainMenu/VBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit")
text = "Start"

[node name="Quit" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 41.0
margin_bottom = 44.0
focus_neighbour_bottom = NodePath(".")
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu"]
margin_left = 105.0
margin_top = 91.0
margin_right = 224.0
margin_bottom = 110.0
text = "Death of the Light"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenu/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
